# graphforge

./: .codecov.yml  .coderabbit.yaml  .coverage  .gitignore  CHANGELOG.md  CHANGELOG_v0.3.0.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  coverage.json  mkdocs.yml  pyproject.toml  test_dataset_registration_debug.py
.github/: ISSUE_WORKFLOW.md  pull_request_template.md
.github/workflows/: docs.yml  publish.yaml  test.yml
docs/: IMPLEMENTATION_SUMMARY.md  column-naming-behavior.md  cypher-guide.md  development-workflow.md  index.md  project-status-and-roadmap.md  session-2026-02-01-summary.md  tck-compliance.md  tutorial.md
docs/datasets/: cypher-script-loading.md  ldbc.md  neo4j-examples.md  networkrepository.md  overview.md  snap.md
docs/development/: QUICKSTART_V0.2.md  codecov-integration.md  contributing.md  phase-1a-completion-report.md  release-process.md  release-strategy.md  tck_baseline_analysis_v0.3.md  testing-setup-complete.md  testing-strategy.md  testing.md  v0.2-plan-summary.md  v0.4-revised-plan.md
docs/getting-started/: quickstart.md  tutorial.md
docs/guide/: cypher-guide.md
docs/reference/: INCOMPLETE_FEATURES_ISSUES.md  README.md  RELEASE_TRACKING.md  VALIDATION_REPORT.md  api.md  column-naming-behavior.md  feature-graph-queries.md  feature-graph-schema.md  feature-return-aliasing.md  opencypher-compatibility-matrix.md  opencypher-compatibility.md  requirements.md  tck-inventory.md
docs/releases/: phase-1-complete.md  phase-2-complete.md
docs/use-cases/: agent-grounding.md
examples/: 01_social_network.py  02_knowledge_graph.py  03_data_lineage.py  04_citation_network.py  05_migration_from_networkx.py  basic_graph.py
examples/agent_grounding/: ecommerce_agent.ipynb
scripts/: build_feature_graph.py  bump_version.py  check_release_needed.py  inventory_tck.py  pre-push-check.sh  tck_metrics.py  validate_datasets.py
src/graphforge/: __init__.py  api.py
tests/: conftest.py
tests/integration/: test_aggregation_edge_cases.py  test_aggregation_functions_advanced.py  test_arithmetic.py  test_builder_api.py  test_call_subqueries.py  test_case_expressions.py  test_collect.py  test_column_naming.py  test_complex_merge_patterns.py  test_complex_where_predicates.py  test_create_clause.py  test_create_edge_cases.py  test_delete_null.py  test_detach_delete.py  test_distinct_clause.py  test_e2e_queries.py  test_executor_edge_cases.py  test_exists_is_empty.py  test_hex_octal_literals.py  test_id_function.py  test_label_disjunction.py  test_list_comprehension.py  test_list_functions.py  test_list_operations.py  test_list_path_overloading.py  test_list_subscript.py  test_logical_operators.py  test_match_create.py  test_math_functions.py  test_math_functions_extended.py  test_merge_edge_cases.py  test_merge_on_create_real.py  test_merge_on_match_real.py  test_null_handling.py  test_optimizer_aggregate_pushdown.py  test_optimizer_integration.py  test_optimizer_redundant_elimination.py  test_optional_match.py  test_optional_match_delete.py  test_path_binding.py  (+32 more)
tests/property/: strategies.py
tests/tck/: conftest.py  download_tck.py  tck_config.yaml  tck_markers.py  test_features.py  (+2 more)
(+176 files in other folders)
