[project]
name = "graphforge"
version = "0.1.0"
description = "An embedded, openCypher-compatible graph workbench for analytical Python workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
{ name = "David Spencer" }
]
keywords = ["graph", "cypher", "analysis", "investigation", "knowledge-graph"]
classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Science/Research",
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License"
]


dependencies = []


[project.optional-dependencies]
pydantic = ["pydantic>=2"]
networkx = ["networkx>=3"]
tck = []
dev = [
"ruff",
"pytest",
"pytest-cov"
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]


[tool.ruff.lint.isort]
known-first-party = ["graphforge"]


[tool.pytest.ini_options]
addopts = "-ra"