[project]
name = "graphforge"
version = "0.1.1"
description = "Composable graph tooling for analysis, construction, and refinement"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David Spencer" }]
keywords = ["graph", "opencypher", "pydantic", "analysis"]

dependencies = [
  "pydantic>=2.6",
  "lark>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "pytest-mock>=3.0",
    "pytest-bdd>=7.0",
    "hypothesis>=6.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/DecisionNerd/graphforge"
Repository = "https://github.com/DecisionNerd/graphforge"
Issues = "https://github.com/DecisionNerd/graphforge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "-v",
]

norecursedirs = [
    ".git",
    ".venv",
    "dist",
    "build",
    "*.egg",
]

markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, may use I/O)",
    "tck: openCypher TCK compliance tests",
    "property: Property-based tests",
    "slow: Tests that take >1s",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "pytest-bdd>=8.1.0",
]
